--- a/study/study.vcxproj
+++ b/study/study.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="Hello World.cpp" />
     <ClCompile Include="变量.cpp" />
     <ClCompile Include="对变量进行定义.cpp" />
+    <ClCompile Include="数据类型.cpp" />
     <ClCompile Include="标识符命名相关.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
