--- a/study/study.vcxproj.filters
+++ b/study/study.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="标识符命名相关.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="数据类型.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
