--- a/study/study.vcxproj.filters
+++ b/study/study.vcxproj.filters
@@ -36,5 +36,17 @@
     <ClCompile Include="浮点型与科学计数法.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="字符型.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="转义字符.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="字符串类型.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="布尔类型.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
