学了下运算符，学到取模了。等会写完

--- a/study/study.vcxproj.filters
+++ b/study/study.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="布尔类型.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="运算符.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
