--- a/study/study.vcxproj
+++ b/study/study.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="标识符命名相关.cpp" />
     <ClCompile Include="浮点型与科学计数法.cpp" />
     <ClCompile Include="转义字符.cpp" />
+    <ClCompile Include="运算符.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
