--- a/study/study.vcxproj.filters
+++ b/study/study.vcxproj.filters
@@ -51,5 +51,8 @@
     <ClCompile Include="运算符.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="真假判断.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
