--- a/study/study.vcxproj.filters
+++ b/study/study.vcxproj.filters
@@ -51,7 +51,7 @@
     <ClCompile Include="运算符.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="真假判断.cpp">
+    <ClCompile Include="逻辑预算-与.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
