--- a/study/study.vcxproj.filters
+++ b/study/study.vcxproj.filters
@@ -57,5 +57,8 @@
     <ClCompile Include="逻辑运算符-或.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="多行if判断.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
