--- a/study/study.vcxproj.filters
+++ b/study/study.vcxproj.filters
@@ -60,5 +60,8 @@
     <ClCompile Include="if相关.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="if多重嵌套.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
