加了switch和猜数字

--- a/study/study.vcxproj
+++ b/study/study.vcxproj
@@ -142,6 +142,8 @@
     <ClCompile Include="Hello World.cpp" />
     <ClCompile Include="if多重嵌套.cpp" />
     <ClCompile Include="sizeoff关键字.cpp" />
+    <ClCompile Include="switch.cpp" />
+    <ClCompile Include="三目.cpp" />
     <ClCompile Include="变量.cpp" />
     <ClCompile Include="if相关.cpp" />
     <ClCompile Include="字符串类型.cpp" />
@@ -151,6 +153,8 @@
     <ClCompile Include="数据类型.cpp" />
     <ClCompile Include="标识符命名相关.cpp" />
     <ClCompile Include="浮点型与科学计数法.cpp" />
+    <ClCompile Include="猜数字.cpp" />
+    <ClCompile Include="留样.cpp" />
     <ClCompile Include="逻辑运算符-或.cpp" />
     <ClCompile Include="逻辑预算-与.cpp" />
     <ClCompile Include="转义字符.cpp" />
