--- a/study/study.vcxproj
+++ b/study/study.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="do-while.cpp" />
     <ClCompile Include="Hello World.cpp" />
     <ClCompile Include="if多重嵌套.cpp" />
     <ClCompile Include="sizeoff关键字.cpp" />
